--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -29,7 +29,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2024 TechCon 2024 Conference</p>
+        <p>&copy; copyright 2024 TechCon 2024 Conference</p>
     </footer>
 
     <script src="script.js"></script>
