--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechCon 2024 Conference</title>
+    <title>techcon 2024 conference</title>
 </head>
 <body>
     <header>
-        <h1>TechCon 2024 Conference</h1>
+        <h1>Techcon 2024 conference</h1>
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
@@ -20,16 +20,16 @@
     
     <main>
         <section>
-            <p>Paragraph describing the event ....</p>
+            <p>paragraph describing the event ....</p>
             <video controls>
                 <source src="promotion.mp4" type="video/mp4">
-                Your browser does not support the video tag.
+                your browser does not support the video tag.
             </video>
         </section>
     </main>
     
     <footer>
-        <p>&copy; copyright 2024 TechCon 2024 Conference</p>
+        <p>&copy; copyright 2024 techcon 2024 conference</p>
     </footer>
 
     <script src="script.js"></script>
