--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -10,10 +10,11 @@
         <h1>About TechCon 2024</h1>
         <nav>
             <ul>
-                <li><a href="about.html">about</a></li>
-                <li><a href="schedule.html">schedule</a></li>
-                <li><a href="register.html">register</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Ccontributionsontact</a></li>
             </ul>
         </nav>
     </header>
