--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -11,10 +11,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="register.html">Register</a></li>
-                <li><a href="contact.html">Ccontributionsontact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -64,8 +63,6 @@
     <footer>
         <p>&copy; copyright 2024 techcon 2024 conference</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
 
