schedule.html fix

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -30,38 +30,18 @@
             <tbody>
                 <tr>
                     <td>09:00 AM - 09:30 AM</td>
-                    <td>Welcome and Opening Remarks</td>
-                    <td>John Doe</td>
+                    <td>Event name</td>
+                    <td>Speaker name</td>
                 </tr>
                 <tr>
                     <td>09:30 AM - 10:30 AM</td>
-                    <td>Keynote Address: Future of Technology</td>
-                    <td>Jane Smith</td>
+                    <td>Event name</td>
+                    <td>Speaker name</td>
                 </tr>
                 <tr>
                     <td>10:45 AM - 12:00 PM</td>
-                    <td>Panel Discussion: AI and Ethics</td>
-                    <td>Panelists: Alex Brown, Sarah Lee, Michael Johnson</td>
-                </tr>
-                <tr>
-                    <td>12:00 PM - 01:00 PM</td>
-                    <td>Lunch Break</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>01:00 PM - 02:30 PM</td>
-                    <td>Workshop: Introduction to Machine Learning</td>
-                    <td>David Green</td>
-                </tr>
-                <tr>
-                    <td>02:45 PM - 04:00 PM</td>
-                    <td>Technical Session: Advances in Quantum Computing</td>
-                    <td>Emily White</td>
-                </tr>
-                <tr>
-                    <td>04:15 PM - 05:30 PM</td>
-                    <td>Closing Keynote: Innovations in Virtual Reality</td>
-                    <td>Robert Jones</td>
+                    <td>Event name</td>
+                    <td>Speaker name</td>
                 </tr>
             </tbody>
         </table>        
@@ -70,8 +50,6 @@
     <footer>
         <p>&copy; copyright 2024 techcon 2024 conference</p>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
 
