schedule.html fix 2

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <table class="schedule-table">
+        <table>
             <caption>Detailed Schedule of Events for TechCon 2024</caption>
             <thead>
                 <tr>
