--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>techcon 2024 conference</title>
+    <title>Techcon 2024 conference</title>
 </head>
 <body>
     <header>
@@ -17,7 +17,6 @@
             </ul>
         </nav>
     </header>
-    
     <main>
         <section>
             <p>paragraph describing the event ....</p>
@@ -27,11 +26,9 @@
             </video>
         </section>
     </main>
-    
     <footer>
         <p>&copy; copyright 2024 techcon 2024 conference</p>
     </footer>
-
 </body>
 </html>
 
